Fixed alignment with max-width: 576px

--- a/style.css
+++ b/style.css
@@ -1,14 +1,29 @@
+html {
+  width: 100%;
+  height: 100%;
+}
 body {
   min-width: fit-content;
   margin: 5%;
   padding: 0;
 }
+
+#nav-bar {
+  padding-top: 1rem;
+  height: 12vh;
+}
+
 div {
   display: block;
 }
 header {
   position: sticky;
   top: 0;
+}
+
+#header-img {
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .navigationBar {
   display: flex;
@@ -17,10 +32,25 @@ header {
   background-color: orange;
   /* background-color: orangered; */
 }
+.navigationItems {
+  display: flex;
+  padding-right: 15px;
+}
+
 .navigationItems li {
   list-style-type: none;
   margin: 0 10px;
   font-size: 18px;
+}
+
+.navigationItems li a {
+  color: #000;
+}
+
+.nav-link {
+  font-weight: 700;
+  text-transform: capitalize;
+  font-family: cursive;
 }
 
 img {
@@ -116,7 +146,10 @@ iframe {
   margin-top: 10%;
   display: flex;
   flex-direction: row;
-  /* justify-content: flex-end; */
+}
+.footerBar p a {
+  color: #000;
+  font-family: cursive;
 }
 .footerBar > p {
   margin-left: 2%;
@@ -124,18 +157,44 @@ iframe {
 }
 
 footer {
-  background-color: grey;
+  background-color: orange;
   text-align: center;
 }
 
-@media (max-width: 360px) {
+.copyRights {
+  margin: 0;
+}
+
+@media (max-width: 576px) {
   .pricing {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   .offer {
     flex: 1;
-    width: 100%;
+    width: 80%;
+    margin: 0 auto;
     margin-bottom: 6%;
+    height: 1000px;
+    font-size: 13px;
+  }
+
+  .offer img {
+    height: 500px;
+    background-size: cover;
+  }
+
+  .productDetails,
+  .productPrice {
+    padding: 0px;
+    margin: 0px;
+    text-align: justify;
+  }
+  .productDetails {
+    padding: 15px;
+  }
+  .productPrice {
+    text-align: center;
   }
 }
